--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
-body {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+header {
+  background-color: #444;
+  width: 100%;
+}
+
+header div {
+  width: 960px;
+  margin: auto;
 }
