--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,80 @@
+body {
+  font-family: sans-serif;
+}
+
 header {
   background-color: #444;
   width: 100%;
+  height: 96px;
+  padding: 13px;
+  box-sizing: border-box;
 }
 
 header div {
   width: 960px;
   margin: auto;
+}
+
+header img {
+  float: left;
+  margin-right: 25px;
+}
+
+nav {
+  float: left;
+}
+
+nav li {
+  display: inline-block;
+  padding: 23px 0;
+  margin-right: 80px;
+  font-size: 18px;
+}
+
+main {
+  width: 960px;
+  margin: auto;
+  padding: 30px 0;
+}
+
+main>img {
+  margin-bottom: 29px;
+}
+
+main li {
+  display: inline-block;
+  margin-right: 25px;
+  margin-bottom: 29px;
+}
+
+main li:last-child {
+  margin-right: 0;
+}
+
+article img {
+  float: left;
+}
+
+article div {
+  padding: 20px;
+  overflow: scroll;
+  height: 400px;
+  box-sizing: border-box;
+}
+
+footer {
+  background-color: #444;
+  width: 100%;
+  height: 96px;
+  padding: 13px;
+  box-sizing: border-box;
+}
+
+article button {
+  position: relative;
+  bottom: 0;
+}
+
+a {
+  color: white;
 }
