--- a/css/style.css
+++ b/css/style.css
@@ -56,10 +56,28 @@ article img {
 }
 
 article div {
-  padding: 20px;
+  padding: 0 30px;
   overflow: scroll;
   height: 400px;
   box-sizing: border-box;
+}
+
+article div h2 {
+  font-size: 125%;
+  margin-bottom: 12px;
+}
+
+article div p {
+  font-style: italic;
+  line-height: 1.4em;
+}
+
+article button {
+  /* width: 100%; */
+  /* position: fixed; */
+  /* display: block; */
+  /* margin-bottom: 0;
+  margin-left: 100; */
 }
 
 footer {
@@ -70,11 +88,7 @@ footer {
   box-sizing: border-box;
 }
 
-article button {
-  position: relative;
-  bottom: 0;
-}
-
 a {
-  color: white;
+  color: #999;
+  text-decoration: none;
 }
